2012-11-05  Lianghui Chen  <liachen@rim.com>

        [BlackBerry] Do not display error page for failed downloads
        https://bugs.webkit.org/show_bug.cgi?id=101246

        Internal PR: 236318
        Internal reviewed by Joe Mason, Leo Yang.
        Reviewed by Rob Buis.

        Right now when a main load, including all downloads, failed, it will
        display an error page. This is not very user friendly, especially for
        WebWorks application, which want to use its own user interface to info
        user about the failure.
        So we just stop displaying error page for downloads.

        * WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
        (WebCore::FrameLoaderClientBlackBerry::dispatchDidFailProvisionalLoad):

2012-11-05  Simon Fraser  <simon.fraser@apple.com>

        Fix layer borders to cleaning appear and disappear on switching
        https://bugs.webkit.org/show_bug.cgi?id=101136

        Reviewed by Sam Weinig.

        Remove the GraphicsLayerClient methods showDebugBorders() and
        showRepaintCounter().

        * Api/WebOverlay_p.h:
        (WebOverlayPrivateWebKitThread):
        * Api/WebPage.cpp:
        (BlackBerry::WebKit::WebPagePrivate::notifyFlushRequired):
        * Api/WebPage_p.h:
        * WebKitSupport/DefaultTapHighlight.cpp:
        * WebKitSupport/DefaultTapHighlight.h:
        (DefaultTapHighlight):
        * WebKitSupport/InspectorOverlayBlackBerry.cpp:
        * WebKitSupport/InspectorOverlayBlackBerry.h:
        (InspectorOverlay):
        * WebKitSupport/SelectionOverlay.cpp:
        * WebKitSupport/SelectionOverlay.h:
        (SelectionOverlay):

2012-11-05  Rob Buis  <rbuis@rim.com>

        [BlackBerry] screenX/Y gives wrong values
        https://bugs.webkit.org/show_bug.cgi?id=101259

        Reviewed by Yong Li.

        PR 237071

        Reviewed internally by Gen Mak.

        Do not transform screenPos coordinates.

        * Api/WebPage.cpp:
        (BlackBerry::WebKit::WebPage::mouseEvent):